--- a/src/css/background.css
+++ b/src/css/background.css
@@ -2,37 +2,45 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	background: #8EE4AF;
 }
 
 .p-select-background{
+	width: 100%;
 	position: absolute;
-	/*font-size: ;*/
 	top: 30%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-family: arial;
+	font-family: 'Roboto';
+	font-size: 6vw;
 	color: orangered;
 	text-align: center;
 }
 
 p span{
 	display: block;
-	color: #aaa;
-	font-size: 0.5rem;
+	color: #fff;
+	font-size: 2vw;
 }
 
-.bg-color-palette-wrapper{
+.bg-color-palette-container{
+	position: relative;
 	height: 50vh;
 	width: 100%;
-	background: #eee;
+	background: #fff;
 	position: absolute;
 	bottom: 0;
 	text-align: center;	
 }
 
+.bg-color-palette-wrapper{
+	margin: 50px auto;
+	max-width: 80%;
+}
+
 .bg-color{
-	min-height: 50px;
-	min-width: 50px;
+	min-height: 80px;
+	min-width: 80px;
 	margin: 20px 20px;
 	border: 1px solid #fff;
 	border-radius: 50%;
@@ -42,6 +50,7 @@ p span{
 
 .bg-color:first-child{
 	background-color: #fff;
+	border: 1px solid #000;
 }
 
 .bg-color:nth-child(2){
@@ -72,10 +81,16 @@ p span{
 	background-color: red;
 }
 
+@media only screen and (max-width: 1220px){
+  .bg-color-palette-wrapper{
+  	    max-width: 70%;
+  }
+}
 
 @media only screen and (max-width: 429px){
-  .bg-color-palette-wrapper{
-  	overflow: scroll;
+  .bg-color{
+  	min-width: 60px;
+  	min-height: 60px;
   }
 }
 
