--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -4,15 +4,18 @@ header{
 
 .logo{
 	display: inline-block;
-	font-family: arial;
-	font-weight: 800;
-	top: -10px;
-	margin-left: 10px;
+	display: inline-block;
+    font-family: 'Bangers';
+    font-size: 2em;
+    margin: 10px 10px 0px 90px;
+    letter-spacing: 3px;
+    color: #222;
 }
 
 .logo2{
-	font-family: courier;
+	font-family: 'Roboto';
 	padding-left: 10px;
 	display: inline-block;
 	margin: 0;
+	color: #F26444;
 }
