--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -3,10 +3,17 @@
 /* Document
    ========================================================================== */
 
-body, html{
+html{
   height: 100%;
+}
+
+body, html{
+  min-height: 100%;
   width: 100%;
   position: relative;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
 }
 
 
