--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -4,6 +4,7 @@ a{
 }
 
 .landing-upper{
+	position: relative;
 	height: 70vh;
 	background: #fff;
 }
@@ -12,6 +13,22 @@ a{
 	position: relative;
 	height: calc(30vh - 50px);;
 	background: #8EE4AF;
+}
+
+.steps{
+	width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    font-size: 3.5em;
+    font-family: 'Bangers';
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    line-height: 100px;
+    letter-spacing: 5px;
+    background: #F26444;
+
 }
 
 .btn-get-started{
@@ -25,11 +42,37 @@ a{
 
 .btn-main{
 	background: #F26444;
-	width: 200px;
-	height: 60px;
+	max-width: 200px;
+	max-height: 60px;
+	min-height: 50px;
+	width: 40%;
+	height: 30%;
+
 	border-radius: 15px;
 	color: #fff;
-	font-size: 1.5em;
+	font-size: 1em;
 	font-family: 'Roboto';
 	cursor: pointer;
+}
+
+@media only screen and (max-width : 700px) {
+	.steps{		
+		font-size: 1.5em;
+	}
+}
+
+@media only screen and (max-width : 500px) {
+	.steps{		
+		font-size: 1em;
+		height: 50px;
+		line-height: 50px;
+	}
+}
+
+@media only screen and (max-height : 700px) {
+	.steps{		
+		font-size: 1em;
+		height: 50px;
+		line-height: 50px;
+	}
 }
