--- a/src/css/slideshow.css
+++ b/src/css/slideshow.css
@@ -1,18 +1,22 @@
-
+.slideshow-container{
+  text-align: center;
+}
 
 .slider{
 	position: relative;
+  margin: auto;
 	height: 70vh;
+  max-width: 80%;
+  padding: 10px;
+  overflow: hidden;
 }
 
 .slider img{
-	opacity: 0;
-	position: absolute;
-	max-width: 80%;
-	max-height: 80%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  vertical-align: middle;
+	max-width: 13%;
+	max-height: 13%;
+  padding: 10px;
+  margin: au;
 }
 
 
@@ -36,7 +40,7 @@
   animation-iteration-count: infinite;
 }
 
-
+/*
 @keyframes fade {
   0%{opacity: 0}
   20%{opacity: 1}
@@ -44,3 +48,10 @@
   100%{opacity: 0}
 }
 
+*/
+
+@media only screen and (max-width : 500px) {
+  .slider{    
+    max-width: 100%
+  }
+}
