--- a/src/css/tools.css
+++ b/src/css/tools.css
@@ -9,7 +9,11 @@
     background: #333;
     border-radius: 10px;
 	border: 3px solid #F26444;
+}
 
+.text-close{
+    color: #fff;
+    right: 20px !important;
 }
 
 .text-form,  #inp-txt-add{
