--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -47,7 +47,7 @@ a{
 	min-height: 50px;
 	width: 40%;
 	height: 30%;
-
+	border-style: none;
 	border-radius: 15px;
 	color: #fff;
 	font-size: 1em;
