--- a/src/css/background.css
+++ b/src/css/background.css
@@ -87,10 +87,11 @@ p span{
   }
 }
 
-@media only screen and (max-width: 429px){
+@media only screen and (max-width: 568px){
   .bg-color{
-  	min-width: 60px;
-  	min-height: 60px;
+  	min-width: 40px;
+  	min-height: 40px;
+  	margin: 10px;
   }
 }
 
