--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -55,6 +55,12 @@ a{
 	cursor: pointer;
 }
 
+@media only screen and (max-width : 1700px) {
+	.slider{		
+		max-width: 100%;
+	}
+}
+
 @media only screen and (max-width : 700px) {
 	.steps{		
 		font-size: 1.5em;
