--- a/src/css/slideshow.css
+++ b/src/css/slideshow.css
@@ -3,6 +3,7 @@
 }
 
 .slider{
+  cursor: pointer;
 	position: relative;
   margin: auto;
 	height: 70vh;
@@ -16,7 +17,19 @@
 	max-width: 13%;
 	max-height: 13%;
   padding: 10px;
-  margin: au;
+  margin: auto;
+}
+
+.slider img:active{
+  position: absolute;
+    left: 50%;
+    top: 0%;
+    max-width: 100vw;
+    max-height: 100vh;
+    transform: translate(-50%, 0%);
+    z-index: 10;
+    border: 15px solid #000;
+    padding: 0;
 }
 
 
