fixed font issue

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -18,7 +18,7 @@ ul li{
 
 .select-font{
     min-width: 100%;
-    margin: auto;
+    margin: 30px auto;
     font-family: 'Roboto';
     text-decoration: underline;
     margin-bottom: 20px;
