--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -78,6 +78,9 @@ li:nth-child(8){
 
 @media only screen and (max-width: 429px){
   ul li, .select-font{
-  	font-size: 1.5em;
+  	font-size: 1em;
+  }
+  ul{
+    padding: 0;
   }
 }
