--- a/src/css/background.css
+++ b/src/css/background.css
@@ -2,7 +2,7 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: #8EE4AF;
+	background: #fff;
 }
 
 .p-select-background{
@@ -19,15 +19,17 @@
 
 p span{
 	display: block;
-	color: #fff;
+	color: #000;
 	font-size: 2vw;
 }
 
 .bg-color-palette-container{
 	position: relative;
-	height: 50vh;
+	overflow: auto;
+	top: 70vh;
+	height: 30vh;
 	width: 100%;
-	background: #fff;
+	background: #8EE4AF;
 	position: absolute;
 	bottom: 0;
 	text-align: center;	
@@ -42,7 +44,7 @@ p span{
 	min-height: 80px;
 	min-width: 80px;
 	margin: 20px 20px;
-	border: 1px solid #fff;
+	border: 3px solid #fff;
 	border-radius: 50%;
 	display: inline-block;
 	cursor: pointer;
@@ -50,7 +52,7 @@ p span{
 
 .bg-color:first-child{
 	background-color: #fff;
-	border: 1px solid #000;
+	border: 3px solid #000;
 }
 
 .bg-color:nth-child(2){
@@ -89,8 +91,8 @@ p span{
 
 @media only screen and (max-width: 568px){
   .bg-color{
-  	min-width: 40px;
-  	min-height: 40px;
+  	min-width: 2em;
+  	min-height: 2em;
   	margin: 10px;
   }
 }
