--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -31,6 +31,7 @@
 }
 
 .lower-editor{
+	background: #8EE4AF;
 	position: relative;
 	width: 100%;
 	height: 30vh;
@@ -51,11 +52,11 @@
 	position: relative;
 	height: 50px;
 	width: 50px;
+	border-radius: 50%;
 	margin: 15px 35px;
-	padding: 5px;
+	padding: 10px;
 	background: #fff;
-	border-bottom: 1px solid #8EE4AF;
-	border-top: 1px solid #8EE4AF;
+	border: 2px solid #F26444;
 	color: #F26444;
 	cursor: pointer;
 }
