--- a/src/css/sliders.css
+++ b/src/css/sliders.css
@@ -1,9 +1,10 @@
 .select-sliders{
+	overflow: auto;
 	position: relative;
 	width: 100%;
 	height: 30vh;
 	bottom: 30vh;
-	background: #fff;
+	background: #8EE4AF;
 	text-align: center;
 }
 
@@ -34,6 +35,21 @@
 .lbl-slider{
 	font-family: 'Roboto';
 	font-size: 20px;
+}
+
+.pos-chev{
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 2em;
+	color: #F26444;	
+}
+
+.pos-scale{
+	color: #fff;
+    border: 1px solid #F26444;
+    border-radius: 50%;
+    padding: 10px;
+    background: #F26444;
 }
 
 @media only screen and (max-width: 600px){
