--- a/src/css/stroke.css
+++ b/src/css/stroke.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 30vh;
 	bottom: 30vh;
-	background: #fff;
+	background: #8EE4AF;
 	text-align: center;
 }
 
@@ -13,3 +13,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+
+/*  Input Range Styles */
+
