--- a/src/css/sliders.css
+++ b/src/css/sliders.css
@@ -9,10 +9,8 @@
 }
 
 .sliders-wrapper{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	width: 100%;
+	margin-top: 20px;
 }
 
 .position-text{
@@ -38,11 +36,22 @@
 }
 
 .pos-chev{
-	margin-left: 10px;
-	margin-right: 10px;
-	font-size: 2em;
+	margin-left: 30px;
+	margin-right: 30px;
+	font-size: 5em;
 	color: #F26444;	
+	cursor: pointer;
 }
+
+.pos-chev:hover{
+	color: #fff;
+}
+
+.pos-chev:active{
+	color: #000;
+}
+
+
 
 .pos-scale{
 	color: #fff;
@@ -56,4 +65,29 @@
   .lbl-slider{
   	font-size: 1em;
   }
+}
+
+@media only screen and (max-height: 740px){
+	.pos-chev{
+		font-size: 4em;
+	}
+}
+
+
+@media only screen and (max-height: 670px){
+	.pos-chev{
+		font-size: 3em;
+	}
+}
+
+@media only screen and (max-height: 500px){
+	.pos-chev{
+		font-size: 2.5em;
+	}
+}
+
+@media only screen and (max-height: 450px){
+	.pos-chev{
+		font-size: 2em;
+	}
 }
