--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -121,6 +121,31 @@
 	color: #000;
 }
 
+.x-close{
+	position: absolute;
+	display: table;
+	right: 10px;
+	top: 5px;
+    z-index: 7;
+	font-family: arial;
+    font-size: 20px;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    border: 3px solid #fff;
+    border-radius: 50%;	
+    background: #F26444;
+    cursor: pointer;
+
+
+}
+
+.x-close span{
+	display: table-cell;
+	vertical-align: middle;
+	color: #fff;	
+}
+
 @media only screen and (max-width: 1080px){
   .meme-result-wrapper p{
   	font-size: 3em;
