--- a/src/css/search.css
+++ b/src/css/search.css
@@ -27,6 +27,52 @@
 	color: #fff;
 }
 
+.search-results-wrapper{
+	width: 80%;
+	margin: auto;
+	padding: 30px;
+	text-align: center;
+}
+
+.search-results-wrapper img{
+	border: 4px solid orange;
+	margin: 20px;
+	cursor: pointer;
+	max-width: 70%;
+}
+
+.preview-wrapper{
+	position: fixed;
+	background: rgba(242, 100, 68, 0.89);
+	margin: auto;
+	width: 75%;
+	left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    border-bottom-left-radius: 0px;
+    animation: fade 2s;
+}
+
+#imgPreview{
+	animation: opacity 3s;
+}
+
+.select-image{
+	position: absolute;
+    bottom: 0;
+    max-width: 100px;
+    min-width: 70px;
+    height: 40px;
+    background: #8EE4AF;
+    font-family: 'Roboto';
+    line-height: 50px;
+    color: #222;
+    border-top-right-radius: 10px;
+    cursor: pointer;
+    animation: opacity 5s;
+}
+
 
 @media only screen and (max-width: 600px){
   .search-bar-wrapper{
@@ -49,5 +95,15 @@
 }
 
 
+/*    Animations    */
 
+@keyframes fade {
+	0%{background: rgba(242, 100, 68, 0);}
+	
+	100%{background: rgba(242, 100, 68, 0.89);}
+}
 
+@keyframes opacity {
+	0%{opacity: 0;}
+	100%{opacity: 1;}
+}
