--- a/src/css/upload.css
+++ b/src/css/upload.css
@@ -7,16 +7,43 @@
     background: #8EE4AF;
 }
 
-.upload-btn-wrapper{
-	position: absolute;
-    left: 50%;
+.getting-started-wrapper{
+    position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 200px;
     text-align: center;
 }
 
+.getting-started-wrapper button{
+    width: 150px;
+}
+
+.btn-upload{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-right: 1px solid #fff;
+}
+
+.btn-search{
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 1px solid #fff;
+}
+
+.upload-btn-wrapper, .search-btn-wrapper{
+    display: inline-block; 
+}
+
+
 #btn-file{
 	display: none;
+}
+
+@media only screen and (max-width: 605px){
+  .btn-upload, .btn-search{
+    border-radius: 10px;
+    border: 0;
+    margin:10px;
+  }
 }
