--- a/src/css/cropper.css
+++ b/src/css/cropper.css
@@ -16,9 +16,13 @@
     text-align: center;
 }
 
+.crop-close{
+    background: orange !important;
+}
+
 #cropIt, .undo-crop{
     position: absolute;
-    top: 0;
+    bottom: 0;
     line-height: 35px;
     right: 20px;
     cursor: pointer;
@@ -53,10 +57,20 @@
 }
 
 #dragger{
-    background: orange;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background: rgba(10,10,10,0.7);
     line-height: 40px;
     height: 40px;
     cursor: move;
     font-family: 'Roboto';
     color: #fff;
+}
+
+#dragger span{
+    padding: 5px 5px;
+    border-radius: 10px;
+    border: 1px solid #fff;
+    background: rgba(10,10,10,0.8);
 }
