--- a/src/css/cropper.css
+++ b/src/css/cropper.css
@@ -6,9 +6,9 @@
 .cropper{
     position: absolute;
     top: 100px;
-    left: 70%;
+    left: 10%;
     width: 50%;
-    min-width: 300px;
+    min-width: 250px;
     min-height: 250px;
     border: 3px solid rgba(200,0,200,0.7);
     overflow: scroll;
@@ -77,4 +77,22 @@
     border-radius: 10px;
     border: 1px solid #fff;
     background: rgba(10,10,10,0.8);
+}
+
+@media only screen and (max-width: 500px){
+  .cropper{
+    display: none;
+  }
+  .crop{
+    display: none;
+  }
+}
+
+@media only screen and (orientation: landscape){
+  .cropper{
+    display: none;
+  }
+  .crop{
+    display: none;
+  }
 }
